# Accord

./: .env.example  .gitignore  ARCHITECTURE-NODES.md  ARCHITECTURE.md  AUDIT-2026-02-19.md  AUDIT-frontend.md  AUDIT-infra.md  AUDIT-rust.md  AUTONOMOUS-DEVELOPMENT-SUMMARY.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT-ROADMAP.md  DEVELOPMENT-STATUS.md  Dockerfile  GOVERNANCE.md  LICENSE  MOBILE.md  PROJECT-CHARTER.md  PROJECT-MAP.md  PROJECT-OVERVIEW.md  QUICKSTART.md  README.md  REPRODUCIBLE-BUILDS.md  ROADMAP.md  SECURITY-AUDIT.md  SECURITY.md  TECHNICAL-SPECIFICATIONS.md  TODO.md  WORKING-DEMO.md  accord.db-shm  accord.db-wal  audit.toml  docker-compose.yml  start-desktop.bat  start-desktop.sh  start-server.sh
accord-cli/: Cargo.toml
accord-cli/src/: main.rs
bot-sdk/: Cargo.toml  README.md
bot-sdk/examples/: echo_bot.rs  moderation_bot.rs
bot-sdk/src/: client.rs  error.rs  lib.rs  models.rs
core/: Cargo.toml  build.rs
core-minimal/: Cargo.toml
core-minimal/src/: channel_types.rs  crypto_minimal.rs  demo.rs  lib.rs  network_protocol.rs
core/benches/: crypto_benchmarks.rs
core/src/: background_voice.rs  bots.rs  build_hash.rs  channels.rs  crypto.rs  device_fingerprint.rs  device_identity.rs  double_ratchet.rs  ffi.rs  friendship_privacy.rs  friendship_proof.rs  invites.rs  jitter_buffer.rs  jni.rs  lib.rs  membership_privacy.rs  metadata_crypto.rs  mnemonic.rs  p2p_voice.rs  protocol.rs  push_crypto.rs  release_signing.rs  sender_keys.rs  session_manager.rs  srtp.rs  timing_privacy.rs  voice.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/frontend/: .env.example  clawbitch-send.cjs  dual-test.cjs  index.html  package-lock.json  package.json  playwright.config.ts  proxy.cjs  vite.config.ts
desktop/frontend/automation/: README.md  disappearing-policy.mjs  disappearing.mjs  driver.mjs  duress.mjs  flows.mjs  hold.mjs  panic-wipe.mjs  read-gate.mjs  smoke.mjs  three-client.mjs  two-client.mjs
desktop/frontend/e2e/: admin-moderation.spec.ts  channel-management.spec.ts  file-upload.spec.ts  full-flow.spec.ts  login.spec.ts  metadata-privacy.spec.ts  navigation.spec.ts  search-messaging.spec.ts  sender-keys.spec.ts  settings-themes.spec.ts  setup-wizard.spec.ts  ui-features.spec.ts
desktop/frontend/src/: App.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  FileManager.tsx  GifPicker.tsx  LinkPreview.tsx  LoadingSpinner.tsx  NodeDiscovery.tsx  NodeSettings.tsx  NotificationSettings.tsx  ProfileCard.tsx  RelayManager.ts  SearchOverlay.tsx  Settings.module.css  Settings.tsx  SetupWizard.tsx  UpdateChecker.tsx  VoiceChat.tsx  WhatsNew.tsx  api.ts  avatarColor.ts  bip39wordlist.ts  buildHash.ts  crypto.ts  customEmojiStore.ts  deviceIdentity.ts  duress.test.ts  duress.ts  hashVerifier.ts  identityStorage.ts  keyboard.ts  localExpiry.test.ts  localExpiry.ts  main.tsx  markdown.ts  notifications.ts  retention.test.ts  retention.ts  styles.css  tauri-shims.d.ts  (+7 more)
desktop/frontend/src/__tests__/: AuthScreens.test.tsx  Avatar.test.tsx  Badge.test.tsx  BotPanel.test.tsx  Button.test.tsx  ChannelSidebar.test.tsx  ChatArea.test.tsx  CommandPalette.test.tsx  ConnectionBanner.test.tsx  ContextMenu.test.tsx  ErrorBoundary.test.tsx  Icon.test.tsx  ImageGrid.test.tsx  ImageLightbox.test.tsx  Input.test.tsx  MediaEmbeds.test.tsx  MemberSidebar.test.tsx  MentionAutocomplete.test.tsx  MessageContextMenu.test.tsx  MessagePreview.test.tsx  Modal.test.tsx  Modals.test.tsx  OnboardingTour.test.tsx  ProfileCard.test.tsx  SavedMessagesPanel.test.tsx  SearchOverlay.test.tsx  ServerHeader.test.tsx  ServerList.test.tsx  SlashCommandPopup.test.tsx  SplashScreen.test.tsx  ThreadsPanel.test.tsx  Toast.test.tsx  Toggle.test.tsx  Tooltip.test.tsx  api.test.ts  e2ee.test.ts  hooks.test.ts  keyboard.test.ts  themes.test.ts  useBlocking.test.ts  (+9 more)
desktop/frontend/src/components/: AppContext.tsx  AuthScreens.tsx  BotPanel.tsx  ChannelSidebar.tsx  ChatArea.tsx  CommandPalette.tsx  ConnectionBanner.tsx  ErrorBoundary.tsx  Icon.tsx  ImageGrid.tsx  ImageLightbox.tsx  MediaEmbeds.tsx  MemberSidebar.tsx  MentionAutocomplete.tsx  MessageContextMenu.tsx  MessagePreview.tsx  Modals.tsx  (+10 more)
desktop/src/: main.rs
server/: Cargo.toml
server/benches/: server_benchmarks.rs
server/data/files/: 64209a3f-8619-405c-8c9c-3a969618ffa7
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: fuzz_api_request.rs  fuzz_crypto_inputs.rs  fuzz_websocket_message.rs
server/src/: admin.rs  backup.rs  batch_handlers.rs  bot_api.rs  db.rs  federation.rs  federation_models.rs  files.rs  handlers.rs  lib.rs  main.rs  metadata.rs  models.rs  node.rs  permissions.rs  push.rs  rate_limit.rs  state.rs  validation.rs  webhooks.rs
server/src/db/: encryption.rs  migration.rs  mod.rs  node_db.rs  relay.rs
server/src/relay_mesh/: config.rs  envelope.rs  identity.rs  mod.rs  peers.rs  router.rs  service.rs  transport.rs
server/static/: admin.html  index.html
server/static/assets/: NodeSettings-KAtOB__a.js  NotificationSettings-C3uPZEq6.js  Settings-D8VieqdX.js  VoiceChat-CHmUtmft.js  index-2qxueV-f.js  index-BAF5kJbA.js  index-BE3orElc.js  index-BgYk1wvD.js  index-BtHjqsfx.js  index-C2ir_Nvp.css  index-C47r48bx.js  index-CPG2mzVI.js  index-Cs9Lj5lE.js  index-DDIYxzgP.js  index-DWnek-Lj.css  index-DbDcYv5R.css  index-Df_uoeIH.js  index-k5WvB6bG.js  index-o2gcBjVa.js  index-qLPmN5IQ.js  index-vh8TshX1.js  vendor-qr-D-XLueNl.js
server/tests/: admin_handlers_test.rs  backup_test.rs  batch_handlers_test.rs  bot_api_test.rs  crud_handlers_test.rs  db_core_test.rs  db_node_test.rs  db_relay_test.rs  federation_handlers_test.rs  file_emoji_handlers_test.rs  files_test.rs  handlers_helpers_test.rs  integration_test.rs  ip_ban_test.rs  metadata_test.rs  misc_handlers_test.rs  models_test.rs  node_test.rs  permissions_test.rs  rate_limit_test.rs  role_model_test.rs  roles_pins_threads_test.rs  social_mod_handlers_test.rs  state_enums_test.rs  validation_test.rs  webhooks_test.rs
standalone-demo/: Cargo.toml
standalone-demo/src/: main.rs
(+249 files in other folders)
