[workspace]
resolver = "2"
members = [
    "core",
    "server", 
    "desktop",
    "core-minimal",
    "accord-cli",
    "standalone-demo"
]

[workspace.package]
version = "0.1.0"
authors = ["Gage <gage@accord.chat>", "Clawbitch <ai@accord.chat>"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://accord.chat"
repository = "https://github.com/Accord-Privacy/Accord"
description = "Privacy-first community communication platform"
keywords = ["privacy", "encryption", "chat", "discord", "e2e"]
categories = ["network-programming", "cryptography", "gui"]
rust-version = "1.86"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography  
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom", "zeroize"] }
ed25519-dalek = "2.0"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
base64 = "0.21"

# Desktop app (Tauri 2.x)
tauri = "2.0"
tauri-build = "2.0"

# Development dependencies
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 1 # Reduce debug info for faster builds

# Security-focused profile for production builds
[profile.secure]
inherits = "release"
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"