[package]
name = "accord-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Accord Contributors"]

[[bin]]
name = "accord"
path = "src/main.rs"

[dependencies]
accord-core-minimal = { path = "../core-minimal" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies (minimal - using std only)