[package]
name = "accord-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Accord Contributors"]

[[bin]]
name = "accord"
path = "src/main.rs"

[dependencies]
accord-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.0"
dirs = "5.0"
anyhow = "1.0"
futures = "0.3"