[package]
name = "accord-bot-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Bot SDK for building Accord bots"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
thiserror = "1"
futures-util = "0.3"
tracing = "0.1"
