[package]
name = "accord-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
ring = { workspace = true }
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Cryptography (using ring instead of libsignal for now)
# opus = "0.3"  # Will add back when we implement voice

# Networking
quinn = "0.10"  # QUIC implementation

# Serialization
bincode = "1.3"
flate2 = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# Random generation
rand = "0.8"

[dev-dependencies]
criterion = "0.5"