[package]
name = "accord-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
ring = { workspace = true }
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Cryptography (using ring instead of libsignal for now)
# opus = "0.3"  # Will add back when we implement voice

# Networking
quinn = "0.11"  # QUIC implementation

# Serialization
bincode = "1.3"
flate2 = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# SRTP voice encryption
aes = { version = "0.8", features = ["zeroize"] }
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"

# Base64 encoding
base64 = "0.21"

# Random generation
rand = "0.8"

# Serialization for push metadata
serde_json = "1.0"

# Double Ratchet dependencies
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }

# JNI for Android
jni = { version = "0.21", optional = true }

[features]
default = []
android = ["jni"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "crypto_benchmarks"
harness = false