[package]
name = "accord-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
accord-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true

# Tauri dependencies
tauri = { version = "1.5", features = ["api-all"] }
tauri-build = { version = "1.5", features = [] }

# Desktop integration
dirs = "5.0"
keyring = "2.0"

[build-dependencies] 
tauri-build = { version = "1.5", features = [] }