[package]
name = "accord-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
accord-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true

# Tauri dependencies
tauri = { version = "2.0", features = [] }

# HTTP client for connectivity testing
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Cryptography
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
hex = "0.4"

# Desktop integration
dirs = "5.0"
keyring = { version = "3", features = ["linux-native"] }

[build-dependencies] 
tauri-build = { version = "2.0", features = [] }
