[package]
name = "accord-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "accord-server"
path = "src/main.rs"

[dependencies]
accord-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (optional - could use SQLite for persistence)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# TLS support
rustls = "0.21"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }