[package]
name = "accord-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]

[[bin]]
name = "accord-server"
path = "src/main.rs"

[dependencies]
accord-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum = { version = "0.7", features = ["ws", "multipart"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }

# Database (optional - could use SQLite for persistence)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Async trait for push providers
async-trait = "0.1"

# Random number generation
rand = "0.8"

# Base64 encoding
base64 = "0.21"

# Cryptographic hashing
sha2 = "0.10"

# Backup/restore archive support
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
libc = "0.2"
tempfile = "3.8"

# Ed25519 signatures for relay mesh
ed25519-dalek = { workspace = true, features = ["rand_core", "serde"] }


# Hex encoding
hex = "0.4"

# SQLCipher (optional, activated via 'sqlcipher' feature)
libsqlite3-sys = { version = "0.30", optional = true }

# Password hashing
argon2 = "0.5"

# TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Self-signed certificate generation
rcgen = "0.13"
hostname = "0.4"

# HTTP client for federation
reqwest = { version = "0.12", features = ["json", "multipart"] }

# URL parsing
url.workspace = true

[dev-dependencies]
tempfile = "3.8"
bincode = "1.3"
base64 = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[[bench]]
name = "server_benchmarks"
harness = false