[package]
name = "accord-standalone-demo"
version = "0.1.0"
edition = "2021"

# Empty workspace to exclude from parent workspace
[workspace]

# Minimal dependencies that don't require build scripts
[dependencies]
# Using only std library - no external dependencies
# This ensures the demo can run without a C compiler