[package]
name = "accord-server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bincode = "1.3"
base64 = "0.21"

[dependencies.accord-server]
path = ".."

[dependencies.accord-core]
path = "../../core"

# Prevent this from interfering with workspace
[workspace]

[[bin]]
name = "fuzz_websocket_message"
path = "fuzz_targets/fuzz_websocket_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_api_request"
path = "fuzz_targets/fuzz_api_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crypto_inputs"
path = "fuzz_targets/fuzz_crypto_inputs.rs"
test = false
doc = false
bench = false
